blur-admin/app/stylesheets/partials/_hdfs.scss
#newFolder {
  text-align: center;
  input {
    width: 20em;
  }
}


#hdfs_wrapper{
  @include full;
  @include standard-font;
  margin-top: 20px;
  height: 300px;

  #hdfs_browser {
    background-color: $grey-div-color;
    @include border;
    @include border-radius;
    div.innerWindow {
      @include border;
      background-color: white;
      .noFiles {
        font-size: 1.2em;
        font-style: italic;
        text-align: center;
      }
      >ul>li {
        &:hover {
          border:  1px solid #B8D6FD;
        }
        &.osxSelected {
          background-color:#3875D7;
          border:  1px solid #3875D7;
          a {
            color: white;
          }
        }
      }
    }
  }

  #file_details_table {
    tr:nth-child(even) { background-color: white; };
    tr:nth-child(odd) { background-color: $grey-div-color; }
    table { margin: 0; @include border;}
    th {
      background-color: $table-hd-color;
      color: $table-hd-text;
    }
    th.name, td.name {text-align: left; }
    th, td {
      @include standard-font;
      text-align: center;
    }
    tr:hover {
      cursor: pointer;
      background: $row-hover;
    }
  }

  .ui-button, a { cursor: pointer; @include standard-font; text-decoration: none; }

  .icon { height: 32px; width: 32px; }
}

